# miow-context-master

./: .env  .miow_cache.json  Antigravitysystemprompt.txt  Cargo.toml  check_output.txt  start-web.sh
crates/miow-agent/: Cargo.toml
crates/miow-agent/src/: autonomous.rs  enhanced_planner.rs  lib.rs  self_monitor.rs  tools.rs
crates/miow-core/: Cargo.toml
crates/miow-core/src/: intelligent_detector.rs  language_registry.rs  lib.rs
crates/miow-graph/: Cargo.toml
crates/miow-graph/src/: lib.rs  query_expansion.rs  relationship_inference.rs  semantic_search.rs
crates/miow-llm/src/: cache.rs  gemini.rs  lib.rs
crates/miow-parsers/: Cargo.toml
crates/miow-parsers/src/: lib.rs  pattern_discovery.rs  python.rs  rust.rs  semantic.rs  typescript.rs
crates/miow-prompt/src/: lib.rs  meta_prompt.rs  pruner.rs
crates/miow-vector/: Cargo.toml
crates/miow-vector/src/: file_watcher.rs  hybrid_search.rs  lib.rs  smart_chunking.rs
src/: main.rs  orchestrator.rs
tests/: integration_test.rs
web/src/: App.css  App.tsx
