[package]
name = "miow-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
miow-core = { path = "../miow-core" }
miow-llm = { path = "../miow-llm" }
miow-common = { path = "../miow-common" }
miow-graph = { path = "../miow-graph" }
miow-vector = { path = "../miow-vector" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1.0", features = ["fs", "process", "io-util"] }
