[package]
name = "miow-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
tracing = { workspace = true }

miow-vector = { path = "../miow-vector" }
miow-parsers = { path = "../miow-parsers" }
miow-llm = { path = "../miow-llm" }
