[package]
name = "miow-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
